aws/aws_vpc_msk/vpc.tf
resource "aws_vpc" "msk_vpc" {
  cidr_block = var.vpc_cidr
  tags = merge(
    local.common-tags,
    {
      "Name"        = "msk-${lower(var.environment)}-vpc"
      "Description" = "VPC for creating MSK resources"
    }
  )
}
